--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "repository": "git@github.com:amndalsr/covid-vaccine-scheduling-backend.git",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Amanda Laís <laisamanda2015@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2"
