--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Amanda Laís <laisamanda2015@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2"
   }
 }
